--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h3 {
     transition: 0.3s ease;
 }
 
-.cup.cup-small-full {
+.cup.cup-small.full {
     background-color: var(--fill-color);
     color: #fff;
 }
